--- a/src/View/Login.form
+++ b/src/View/Login.form
@@ -97,7 +97,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="a280d" class="javax.swing.JTextField" default-binding="true">
+              <component id="a280d" class="javax.swing.JTextField" binding="registerTextField">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -113,7 +113,7 @@
                   <text value="Username :"/>
                 </properties>
               </component>
-              <component id="fa93a" class="javax.swing.JPasswordField" default-binding="true">
+              <component id="fa93a" class="javax.swing.JPasswordField" binding="registerPasswordField">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -149,7 +149,7 @@
                   <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="dc7cd" class="javax.swing.JButton" default-binding="true">
+              <component id="dc7cd" class="javax.swing.JButton" binding="registerButton">
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
